--- a/variaveisvariantes/inicio.html
+++ b/variaveisvariantes/inicio.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div>
-    <form method="get" action="exercicio01.php">
+    <form method="get" action="passo1.php">
         Quantidade formulário : <input type='number' name='cont' max='10' min='1' value='0'><br/>
         <p><input type="submit" value="Gerar" class="botao"></p>
     </form>
